--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,9 @@ OPENROUTER_API_KEY="YOUR_OPENROUTER_KEY_HERE"         # Optional, for OpenRouter
 AZURE_OPENAI_API_KEY="your_azure_key_here"            # Optional, for Azure OpenAI models (requires endpoint in .taskmaster/config.json).
 OLLAMA_API_KEY="your_ollama_api_key_here"             # Optional: For remote Ollama servers that require authentication.
 GITHUB_API_KEY="your_github_api_key_here"             # Optional: For GitHub import/export features. Format: ghp_... or github_pat_...
+
+# CC Telegram Bridge Configuration
+TELEGRAM_BOT_TOKEN="your_telegram_bot_token_here"     # Required: Get from @BotFather
+TELEGRAM_ALLOWED_USERS="297126051"                    # Required: Comma-separated user IDs
+CC_TELEGRAM_EVENTS_DIR="/Users/username/.cc_telegram/events"     # Optional: Custom events directory
+CC_TELEGRAM_RESPONSES_DIR="/Users/username/.cc_telegram/responses" # Optional: Custom responses directory
