--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,6 +83,9 @@ arc-swap = "1.7"
 tempfile = "3.8"
 tokio-test = "0.4"
 
+[build-dependencies]
+chrono = { version = "0.4", features = ["clock"] }
+
 [profile.release]
 lto = true
 codegen-units = 1
