--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -19,7 +19,26 @@
     "test:observability": "tsx src/observability/test-integration.ts",
     "test:e2e": "playwright test",
     "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:workflows": "playwright test --grep=\"Workflow\"",
+    "test:e2e:mobile": "playwright test --grep=\"Mobile\"",
+    "test:e2e:performance": "playwright test --grep=\"performance\"",
+    "test:e2e:visual": "playwright test --grep=\"visual\"",
+    "test:e2e:cross-browser": "playwright test --project=\"Chrome Desktop - Workflows\" --project=\"Firefox Desktop - Workflows\" --project=\"Safari Desktop - Workflows\"",
+    "test:chaos": "jest --testPathPattern=chaos --testTimeout=300000",
+    "test:chaos:network": "jest --testPathPattern=chaos.*network --testTimeout=180000",
+    "test:chaos:service": "jest --testPathPattern=chaos.*service --testTimeout=240000",
+    "test:chaos:recovery": "jest --testPathPattern=chaos.*recovery --testTimeout=360000",
+    "test:chaos:all": "npm run test:chaos",
+    "chaos:toxiproxy:start": "docker run -d --name toxiproxy -p 8474:8474 -p 26379-26389:26379-26389 ghcr.io/shopify/toxiproxy",
+    "chaos:toxiproxy:stop": "docker stop toxiproxy && docker rm toxiproxy",
+    "chaos:dashboard": "tsx tests/chaos/dashboard/chaos-dashboard.ts",
     "test:validate": "node scripts/validate-testing-infrastructure.js",
+    "test:tier-integration": "node scripts/run-tier-integration-tests.js",
+    "test:tier-integration:dev": "node scripts/run-tier-integration-tests.js --no-cleanup",
+    "test:tier-cleanup": "node scripts/run-tier-integration-tests.js --cleanup-only",
+    "test:tier-validate": "node scripts/validate-tier-tests.js",
     "observability:example": "tsx src/observability/example-integration.ts",
     "lint": "eslint \"src/**/*.{ts,tsx}\" --fix",
     "lint:check": "eslint \"src/**/*.{ts,tsx}\"",
@@ -50,6 +69,27 @@
     "benchmark:ci": "tsx src/benchmark/benchmark-runner.ts --baseline benchmark-baseline.json --threshold 10 --quiet --output benchmark-ci-results.json",
     "benchmark:regression": "tsx src/benchmark/benchmark-runner.ts --baseline benchmark-baseline.json --threshold 5 --output benchmark-regression.json",
     "test:benchmark": "jest --testPathPattern=benchmark --testTimeout=300000",
+    "perf:k6": "k6 run tests/performance/k6/load-test.js",
+    "perf:k6:load": "TARGET_VUS=50 BASE_URL=http://localhost:3000 k6 run tests/performance/k6/load-test.js",
+    "perf:k6:stress": "TARGET_VUS=100 BASE_URL=http://localhost:3000 k6 run tests/performance/k6/stress-test.js",
+    "perf:k6:spike": "BASELINE_VUS=10 SPIKE_VUS=200 BASE_URL=http://localhost:3000 k6 run tests/performance/k6/spike-test.js",
+    "perf:k6:soak": "SOAK_VUS=30 SOAK_DURATION=10m BASE_URL=http://localhost:3000 k6 run tests/performance/k6/soak-test.js",
+    "perf:autocannon": "tsx tests/performance/autocannon/autocannon-suite.ts",
+    "perf:autocannon:webhook": "tsx tests/performance/autocannon/webhook-benchmark.ts",
+    "perf:monitor": "tsx tests/performance/resource-monitor.ts",
+    "perf:monitor:demo": "tsx -e \"import { ResourceMonitor } from './tests/performance/resource-monitor.js'; const monitor = new ResourceMonitor(); await monitor.startMonitoring(); setTimeout(() => monitor.stopMonitoring(), 30000);\"",
+    "perf:baseline": "tsx -e \"import { BaselineManager, recordPerformanceBaseline } from './tests/performance/baseline-manager.js'; console.log('Baseline management tools ready');\"",
+    "perf:baseline:record": "tsx -e \"import { runIntegratedPerformanceTests } from './tests/performance/integration-runner.js'; runIntegratedPerformanceTests({ testTypes: ['load'], baseline: { recordBaselines: true, compareToBaselines: false } });\"",
+    "perf:regression": "tsx -e \"import { setupRegressionDetection, BaselineManager } from './tests/performance/regression-detector.js'; import { BaselineManager as BM } from './tests/performance/baseline-manager.js'; const bm = new BM(); await bm.initialize(); const rd = await setupRegressionDetection(bm); console.log('Regression detection ready');\"",
+    "perf:regression:check": "tsx -e \"import { runIntegratedPerformanceTests } from './tests/performance/integration-runner.js'; runIntegratedPerformanceTests({ testTypes: ['load'], regression: { enableDetection: true } });\"",
+    "perf:integrated": "tsx tests/performance/integration-runner.ts",
+    "perf:integrated:full": "tsx -e \"import { runIntegratedPerformanceTests } from './tests/performance/integration-runner.js'; runIntegratedPerformanceTests({ testTypes: ['load', 'stress', 'autocannon', 'webhook'] });\"",
+    "perf:integrated:baseline": "tsx -e \"import { runIntegratedPerformanceTests } from './tests/performance/integration-runner.js'; runIntegratedPerformanceTests({ testTypes: ['load', 'autocannon'], baseline: { recordBaselines: true, compareToBaselines: true } });\"",
+    "perf:integrated:ci": "tsx -e \"import { runIntegratedPerformanceTests } from './tests/performance/integration-runner.js'; runIntegratedPerformanceTests({ testTypes: ['load'], regression: { enableDetection: true }, reporting: { generateReports: true } });\"",
+    "perf:dashboard": "tsx tests/performance/dashboard-generator.ts",
+    "perf:report": "tsx tests/performance/performance-reporter.ts",
+    "perf:all": "npm run perf:integrated:full",
+    "perf:quick": "npm run perf:integrated:ci",
     "validate": "npm run type-check && npm run lint:check && npm run format:check && npm run test:ci"
   },
   "keywords": [
@@ -94,6 +134,7 @@
     "@types/benchmark": "^2.1.5",
     "@types/bull": "^3.15.9",
     "@types/crypto-js": "^4.2.2",
+    "@types/dockerode": "^3.3.23",
     "@types/fs-extra": "^11.0.4",
     "@types/helmet": "^0.0.48",
     "@types/ioredis": "^4.28.10",
@@ -109,13 +150,20 @@
     "autocannon": "^7.15.0",
     "benchmark": "^2.1.4",
     "clinic": "^13.0.0",
+    "dockerode": "^4.0.2",
+    "k6": "^0.0.0",
+    "pidusage": "^3.0.2",
+    "systeminformation": "^5.21.22",
+    "toxiproxy-node": "^2.0.3",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "jest-sonar-reporter": "^2.0.0",
     "msw": "^2.2.1",
     "nyc": "^15.1.0",
+    "pixelmatch": "^5.3.0",
     "playwright": "^1.42.1",
+    "pngjs": "^7.0.0",
     "prettier": "^3.2.5",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
