--- a/Cargo.toml
+++ b/Cargo.toml
@@ -103,6 +103,9 @@ tempfile = "3.8"
 # Random number generation for periodic tasks
 rand = "0.8"
 
+# SHA256 hashing for file content verification
+sha2 = "0.10"
+
 
 [dev-dependencies]
 tokio-test = "0.4"
