--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -152,21 +152,36 @@
     "axios": "^1.11.0",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
+    "dotenv-expand": "^12.0.2",
     "express": "^5.1.0",
     "fs-extra": "^11.2.0",
     "helmet": "^8.1.0",
+    "inquirer": "^12.9.0",
     "joi": "^18.0.0",
+    "lodash-es": "^4.17.21",
+    "lru-cache": "^11.1.0",
     "path": "^0.12.7",
     "pino": "^9.7.0",
     "pino-pretty": "^13.1.1",
     "prom-client": "^15.1.2",
     "rate-limiter-flexible": "^7.2.0",
+    "table": "^6.9.0",
     "uuid": "^9.0.1",
     "winston": "^3.17.0",
     "ws": "^8.16.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.42.1",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^11.1.0",
+    "@semantic-release/exec": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^9.2.6",
+    "@semantic-release/npm": "^11.0.2",
+    "@semantic-release/release-notes-generator": "^12.1.0",
+    "@stryker-mutator/core": "^8.0.0",
+    "@stryker-mutator/jest-runner": "^8.0.0",
+    "@stryker-mutator/typescript-checker": "^8.0.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@types/benchmark": "^2.1.5",
     "@types/bull": "^3.15.9",
@@ -174,11 +189,18 @@
     "@types/dockerode": "^3.3.23",
     "@types/fs-extra": "^11.0.4",
     "@types/helmet": "^0.0.48",
+    "@types/inquirer": "^9.0.9",
     "@types/ioredis": "^4.28.10",
     "@types/jest": "^30.0.0",
+    "@types/js-yaml": "^4.0.9",
+    "@types/lodash-es": "^4.17.12",
+    "@types/lru-cache": "^7.10.9",
     "@types/node": "^20.0.0",
     "@types/opossum": "^8.1.9",
     "@types/p-retry": "^3.0.0",
+    "@types/pixelmatch": "^5.2.6",
+    "@types/pngjs": "^6.0.5",
+    "@types/semver": "^7.7.0",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.8",
     "@types/ws": "^8.5.10",
@@ -187,43 +209,29 @@
     "autocannon": "^7.15.0",
     "benchmark": "^2.1.4",
     "clinic": "^13.0.0",
+    "conventional-changelog-conventionalcommits": "^7.0.2",
     "dockerode": "^4.0.2",
-    "k6": "^0.0.0",
-    "pidusage": "^3.0.2",
-    "systeminformation": "^5.21.22",
-    "toxiproxy-node": "^1.0.1",
-    "@stryker-mutator/core": "^8.0.0",
-    "@stryker-mutator/jest-runner": "^8.0.0",
-    "@stryker-mutator/typescript-checker": "^8.0.0",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "jest-sonar-reporter": "^2.0.0",
+    "k6": "^0.0.0",
     "msw": "^2.2.1",
     "nyc": "^15.1.0",
+    "pidusage": "^3.0.2",
     "pixelmatch": "^5.3.0",
     "playwright": "^1.42.1",
     "pngjs": "^7.0.0",
     "prettier": "^3.2.5",
+    "semantic-release": "^22.0.12",
+    "semver": "^7.7.2",
     "supertest": "^6.3.4",
+    "systeminformation": "^5.21.22",
+    "toxiproxy-node": "^1.0.1",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "tsx": "^4.7.0",
-    "typescript": "^5.3.0",
-    "@pact-foundation/pact": "^13.2.0",
-    "@pact-foundation/pact-node": "^13.2.1",
-    "@pact-foundation/pact-web": "^13.2.0",
-    "pact-broker-cli": "^1.1.0",
-    "semver": "^7.5.4",
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/commit-analyzer": "^11.1.0",
-    "@semantic-release/exec": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^9.2.6",
-    "@semantic-release/npm": "^11.0.2",
-    "@semantic-release/release-notes-generator": "^12.1.0",
-    "conventional-changelog-conventionalcommits": "^7.0.2",
-    "semantic-release": "^22.0.12"
+    "typescript": "^5.3.0"
   },
   "overrides": {
     "d3-color": "^3.1.0",
