Fix TypeScript Compilation Errors in MCP Server

--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --project tsconfig.build.json --noErrorTruncation false --skipLibCheck true",
     "start": "node dist/index.js",
     "dev": "tsx src/index.ts",
     "docs:install": "cd docs && npm install",
@@ -185,6 +185,7 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@types/benchmark": "^2.1.5",
     "@types/bull": "^3.15.9",
+    "@types/chokidar": "^1.7.5",
     "@types/crypto-js": "^4.2.2",
     "@types/dockerode": "^3.3.23",
     "@types/fs-extra": "^11.0.4",
@@ -208,6 +209,7 @@
     "@typescript-eslint/parser": "^7.0.0",
     "autocannon": "^7.15.0",
     "benchmark": "^2.1.4",
+    "chokidar": "^4.0.3",
     "clinic": "^13.0.0",
     "conventional-changelog-conventionalcommits": "^7.0.2",
     "dockerode": "^4.0.2",
