--- a/Cargo.toml
+++ b/Cargo.toml
@@ -106,6 +106,9 @@ rand = "0.8"
 # SHA256 hashing for file content verification
 sha2 = "0.10"
 
+# Compression support for queue storage efficiency
+flate2 = "1.0"
+
 
 [dev-dependencies]
 tokio-test = "0.4"
