--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,6 @@
-# API Keys (Required to enable respective provider)
-ANTHROPIC_API_KEY="your_anthropic_api_key_here"       # Required: Format: sk-ant-api03-...
-PERPLEXITY_API_KEY="your_perplexity_api_key_here"     # Optional: Format: pplx-...
-OPENAI_API_KEY="your_openai_api_key_here"             # Optional, for OpenAI models. Format: sk-proj-...
-GOOGLE_API_KEY="your_google_api_key_here"             # Optional, for Google Gemini models.
-MISTRAL_API_KEY="your_mistral_key_here"               # Optional, for Mistral AI models.
-XAI_API_KEY="YOUR_XAI_KEY_HERE"                       # Optional, for xAI AI models.
-GROQ_API_KEY="YOUR_GROQ_KEY_HERE"                     # Optional, for Groq models.
-OPENROUTER_API_KEY="YOUR_OPENROUTER_KEY_HERE"         # Optional, for OpenRouter models.
-AZURE_OPENAI_API_KEY="your_azure_key_here"            # Optional, for Azure OpenAI models (requires endpoint in .taskmaster/config.json).
-OLLAMA_API_KEY="your_ollama_api_key_here"             # Optional: For remote Ollama servers that require authentication.
-GITHUB_API_KEY="your_github_api_key_here"             # Optional: For GitHub import/export features. Format: ghp_... or github_pat_...
-
 # CC Telegram Bridge Configuration
-TELEGRAM_BOT_TOKEN="your_telegram_bot_token_here"     # Required: Get from @BotFather
-TELEGRAM_ALLOWED_USERS="297126051"                    # Required: Comma-separated user IDs
-CC_TELEGRAM_EVENTS_DIR="/Users/username/.cc_telegram/events"     # Optional: Custom events directory
-CC_TELEGRAM_RESPONSES_DIR="/Users/username/.cc_telegram/responses" # Optional: Custom responses directory
+TELEGRAM_BOT_TOKEN="8239064724:AAHo6M_2xqqQhBpIc__oZkEfp_0pKowDN_A"     # Required: Get from @BotFather
+TELEGRAM_ALLOWED_USERS="297126051"                    # Required: Comma-separated user IDs Default: Enrique
+CC_TELEGRAM_EVENTS_DIR="/Users/enrique/.cc_telegram/events"     # Optional: Custom events directory
+CC_TELEGRAM_RESPONSES_DIR="/Users/enrique/.cc_telegram/responses" # Optional: Custom responses directory
+CC_TELEGRAM_MESSAGE_STYLE=detailed                      # Options: "concise" (default), "detailed"
