--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+# copy to /Users/username/.cctelegram/.env
+
 # CC Telegram Bridge Configuration
 TELEGRAM_BOT_TOKEN="8239064724:AAHo6M_2xqqQhBpIc__oZkEfp_0pKowDN_A"     # Required: Get from @BotFather
 TELEGRAM_ALLOWED_USERS="297126051"                    # Required: Comma-separated user IDs Default: Enrique
