remove telegram defaults

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # copy to /Users/username/.cctelegram/.env
 
 # CC Telegram Bridge Configuration
-TELEGRAM_BOT_TOKEN="8239064724:AAHo6M_2xqqQhBpIc__oZkEfp_0pKowDN_A"     # Required: Get from @BotFather
-TELEGRAM_ALLOWED_USERS="297126051"                    # Required: Comma-separated user IDs Default: Enrique
+TELEGRAM_BOT_TOKEN="TELEGRAM_BOT_TOKEN"     # Required: Get from @BotFather
+TELEGRAM_ALLOWED_USERS=""                    # Required: Comma-separated user IDs Default: Enrique
 CC_TELEGRAM_EVENTS_DIR="/Users/enrique/.cc_telegram/events"     # Optional: Custom events directory
 CC_TELEGRAM_RESPONSES_DIR="/Users/enrique/.cc_telegram/responses" # Optional: Custom responses directory
 CC_TELEGRAM_MESSAGE_STYLE=detailed                      # Options: "concise" (default), "detailed"
